# asciifolding

./: Cargo.toml
benches/: bench.rs
src/: lib.rs
